<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>pers.project.api</groupId>
    <artifactId>insight-api</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>insight-api</name>
    <description>insight-api</description>

    <!-- 设置为父模块 -->
    <packaging>pom</packaging>

    <!--  这里的属性会被子模块继承  -->
    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
        <spring-boot.version>3.0.5</spring-boot.version>
        <spring-cloud.version>2022.0.2</spring-cloud.version>
        <spring-cloud-alibaba.version>2022.0.0.0-RC1</spring-cloud-alibaba.version>
        <knife4j.version>4.1.0</knife4j.version>
        <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
        <!-- 2.0.27 以下版本存在与项目相关的序列化 BUG https://github.com/alibaba/fastjson2/issues/1286 -->
        <fastjson2.version>2.0.28</fastjson2.version>
        <commons-io.version>2.11.0</commons-io.version>
        <cos_api.version>5.6.137.2</cos_api.version>
        <mica-ip2region.version>3.0.5</mica-ip2region.version>
        <sensitive-word.version>0.2.1</sensitive-word.version>
        <tencentcloud-sdk-java.version>3.1.737</tencentcloud-sdk-java.version>
    </properties>

    <!-- 子模块 -->
    <modules>
        <module>api-client</module>
        <module>api-common</module>
        <module>api-facade</module>
        <module>api-gateway</module>
        <module>api-provider</module>
        <module>api-security</module>
    </modules>

    <!-- 依赖管理 -->
    <dependencyManagement>
        <dependencies>
            <!-- 管理 Spring Boot 的所有依赖版本 -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- 管理 Spring Cloud 的所有依赖版本 -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- 管理 Spring Cloud Alibaba 的所有依赖版本 -->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.github.xiaoymin/knife4j-spring-boot-starter -->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-boot-starter -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.alibaba.fastjson2/fastjson2 -->
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.alibaba.fastjson2/fastjson2-extension -->
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2-extension-spring6</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/net.dreamlu/mica-ip2region -->
            <dependency>
                <groupId>net.dreamlu</groupId>
                <artifactId>mica-ip2region</artifactId>
                <version>${mica-ip2region.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.github.houbb/sensitive-word -->
            <dependency>
                <groupId>com.github.houbb</groupId>
                <artifactId>sensitive-word</artifactId>
                <version>${sensitive-word.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.qcloud/cos_api -->
            <dependency>
                <groupId>com.qcloud</groupId>
                <artifactId>cos_api</artifactId>
                <version>${cos_api.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.tencentcloudapi/tencentcloud-sdk-java-sms -->
            <dependency>
                <groupId>com.tencentcloudapi</groupId>
                <artifactId>tencentcloud-sdk-java-sms</artifactId>
                <version>${tencentcloud-sdk-java.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.tencentcloudapi/tencentcloud-sdk-java-ses -->
            <dependency>
                <groupId>com.tencentcloudapi</groupId>
                <artifactId>tencentcloud-sdk-java-ses</artifactId>
                <version>${tencentcloud-sdk-java.version}</version>
            </dependency>
        </dependencies>

    </dependencyManagement>

    <!--  这里的依赖会被子模块继承  -->
    <dependencies>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
